themes/base_files/scss/_tiki-modules.scss
// Redundant for .module.card, but needed when nobox=y.
.module {
    position: relative;
}

header.container,
.middle_outer > .container {
    margin-bottom: 0;
}


.tiki.layout_classic .header_container .container.container-std {
    max-width: 100% !important;
    width: 100% !important;
}

// Vertically center visible content in fixed-top navbar
@media(min-width: 720px) {.layout_social .fixed-top .top_modules .module { align-self: center; } }

#top_modules,
#topbar_modules,
#pagetop_modules,
#pagebottom_modules,
.bottom_modules {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.topbar .navbar { padding: 0; }

#pagetop_modules,
#pagebottom_modules,
.bottom_modules {
    align-items: flex-start;
    flex-wrap: wrap;
}

//.bottom_modules {
//    display: grid;
//    grid-template-columns: repeat(auto-fill, minmax(273px, 1fr));
//    grid-gap: 30px;
//    grid-row-gap: 30px;
//}

//***** Site Header & Identity *****/
.box-quickadmin li {
    font-size: 0.9em;
}

.mod-share-item {
    float: left;
}

.mod-share-item a img {
    margin-right: .5em;
}

.mod-share-item.google-root {
    margin-left: .5em;
}

.share img {
    margin-bottom: -5px;
}

// to improve display of items in months_links module for blogs and articles
li.archivedate {
    list-style: none outside none;
}

.olLayerGoogleV3.olLayerGooglePoweredBy {
    bottom: 15px !important;
    visibility: hidden;
}

// /***** Boxes *****/
// ** Modules **/
// When the module title is a link, make it the card-title color.
.card.module .card-title a {
    color: var(--bs-card-title-color);
}

.minichatdiv {
    font-size: .9em;
}

// mod-switch_lang

.box-switch_lang .box-data img.highlight {
    padding: .1em;
    //    border: .1em solid $alert-danger-border;
}

//.box-switch_lang .box-data .highlight {
//    border: .1em solid $alert-danger-border;
//}

.box-switch_lang li {
    list-style: none;
}

.box-switch_lang .box-data a.highlight {
    font-weight: bold;
}

.box-switch_lang ul {
    padding: 0 1em;
}

.box-switch_lang .panel-body img {
    margin: .2em;
    vertical-align: middle;
}

.box-switch_lang .flags a {
    margin: .1rem;
}

.box-switch_lang .flags .unavailable {
    opacity: .7;
}


// This is kludgy but works for now.
#col1 .box-search input[type=submit],
#col1 .box-search input[type=submit]:hover,
#col2 .box-search input[type=submit],
#col2 .box-search input[type=submit]:hover,
#col3 .box-search input[type=submit],
#col3 .box-search input[type=submit]:hover {
    margin: 0;
}

.box-search .input-group {
    padding: 0;
}

#col2 .box-search .input-group-append,
#col3 .box-search .input-group-append { display: inline-block; }

.box-search .search_mod_buttons {
    display: none;
    position: absolute;
    right: 0;
    z-index: 3;
    white-space: nowrap;
}

// Modules with nobox=y should have same whitespace below as cards do.
#col2 .module,
#col3 .module,
#pagetop_modules .module {
    margin-bottom: 1.25rem;
}

.box-forums_most_read_topics .hits {
    font-style: italic;
}

.box-since_last_visit_new .ui-tabs .ui-tabs-nav {
    padding: 0;
    border: none;
}

.box-since_last_visit_new .ui-tabs .ui-tabs-nav li {
    margin-right: 0;
    text-align: center;
    width: 22%;
}

.box-since_last_visit_new .ui-tabs .ui-tabs-nav li a {
    padding: .3em .2em;
}

.box-upcoming_events tr:first-child {
    vertical-align: top;
}

// /* Twitter module styling */
.TwitName {
    font-weight: bold;
}

.TwitDate a {
    font-size: 0.8em;
    font-style: italic;
    text-align: right;
    display: block;
    padding-bottom: 8px;
}

// /* Facebook module styling */
.fb-story {
    font-style: italic;
}

.fb-date a {
    font-size: 0.8em;
    font-style: italic;
    text-align: right;
    display: block;
    padding-bottom: 8px;
}

.fb-name {
    font-weight: bold;
    display: block;
}

// /* Users_list module styling */
#role_main .box-users_list {
    max-width: 100%;
}

.box-share > div {
    text-align: center;
}

// --------------- logo module start ------------------ //
// Not Basic Bootstrap (not layout_social)
header:not(.fixed-top) a.sitelogo {
    padding-top: $spacer * .7;
    padding-bottom: $spacer * .7;
}

// Basic layout (layout_social) and Classic Tiki layout (layout_classic)
.sitetitles {
    display: inline-block;
    .sitetitle {
        font-size: var(--tiki-site-title-font-size); // 2rem; These CSS variables are defined in base_files/scss/_tiki-variables.scss or by each theme or in L&F custom CSS.
        font-weight: var(--tiki-site-title-font-weight); // 700;
    }
    .sitesubtitle {
        font-size: var(--tiki-site-subtitle-font-size); // 1.6rem;
        font-weight: var(--tiki-site-subtitle-font-weight); // 500;
    }
    .d-flex {
        justify-content: center;
        flex-direction: column;
//        align-content: center; Doesn't seem to have any effect here.
        height: 100%;
    }
}

// Basic Bootstrap (layout_social)
.layout_social .fixed-top .sitesubtitle {
    font-size: calc(var(--bs-navbar-brand-font-size) * .8);
}

// Remove Bootstrap default top and bottom padding on navbars in modules (nested navbars)
.layout_social header .top_modules .navbar {
    --bs-navbar-padding-y: 0;
    --bs-navbar-padding-x: 0;
    padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x);
}

// --------------- logo module end ------------------ //

.pass a,
.pass a:visited,
.pass a:hover,
.register a,
.register a:visited,
.register a:hover,
.logged-in a,
li.login_link ul li a {
    background: none !important;
}

.siteloginbar_popup img {
    height: 24px;
}

.navbar-form .siteloginbar_poppedup .form-control,
.navbar-form .siteloginbar_poppedup .mb-3.text-center{
    width: 100%;
}

// /* Center column */

.share {
    text-align: right;
}

a.flip,
a.flip:visited,
.share a,
.share a:visited,
a.flip:hover,
.share a:hover {
    font-size: 80%;
    text-decoration: none;
}

#rss small {
    font-size: 1em;
}

footer.footer .modules > .module:not(.card) {
    padding-left: 15px;
    padding-right: 15px;
}

.alphafilter {
    display: block;
    margin: 10px 0;
    text-align: center;
}

.alphafilter a {
    font-size: 120%;
}

.alphafilter .highlight {
    font-weight: bold;
    font-size: 130%;
}

.top_actions {
    text-align: right;
    margin-top: 5px;
}

#mytabs .ui-tabs-nav {
    zoom: 0.70;
}

#mytabs .ui-widget-content {
    margin-left: -10px;
    zoom: 0.85;
}

#mytabs {
    min-width: 150px;
}

// /* Password domain module */
.pwddom_domain_name {
    font-weight: bold;
}

.pwddom_username_name {
    font-weight: bold;
}

.tiki_login #col1 .box-login_box {
    margin-left: auto;
    margin-right: auto;
}

// Font size and weight for static position logo module (fixed-top navbar is below)
.sitetitle {
    font-size: var(--tiki-site-title-font-size);
    font-weight: var(--tiki-site-title-font-weight);
}

.sitesubtitle {
    font-size: var(--tiki-site-subtitle-font-size);
    font-weight: var(--tiki-site-subtitle-font-weight);
}

// Font size and weight for fixed-top position logo module (likely smaller than for static position)
.navbar-fixed-top, // Where is this used? - gary
.layout_social .top_modules, // This was .topbar_modules until Nov 2022 so rarely applied
header.fixed-top {
//    .sitelogo a img {
//        display: inline;
//        margin-top: $tiki-navbar-fixed-height / 10;
//        margin-bottom: $tiki-navbar-fixed-height / 10;
//        max-height: $tiki-navbar-fixed-height / 1.25;
//        width: auto !important;
//    }
    .sitetitle {
        //        float: left;
        font-size: var(--tiki-fixed-top-site-title-font-size);
        font-weight: var(--tiki-fixed-top-site-title-font-weight);
        //        line-height: 2;
        //        margin-bottom: 0;
        //        margin-left: 1rem;
      }
        .sitesubtitle {
            //        float: left;
            font-size: var(--tiki-fixed-top-site-subtitle-font-size);
            font-weight: var(--tiki-fixed-top-site-subtitle-font-weight);
            //        margin-left: 1.5rem;
            //    }
            #topbar_modules {
                display: inline-block;
            }

            select.form-control {
                //        margin-top: $tiki-navbar-fixed-height / 6;
                padding-top: 4px;
                padding-bottom: 4px;
            }

            //    .btn,
            //    .btn-link {
            //        margin-top: $tiki-navbar-fixed-height / 7;
            //    }
            //    .navbar-inverse .navbar-collapse,
            //    .navbar-inverse .navbar-form,
            //    .navbar-inverse {
            //        border-color: transparent;
            //    }
        }
    }
.navbar-fixed-top,
#navbar-collapse-social {
    .navbar {
        margin-bottom: 0;
        min-height: 32px;

    }
}

.box-menu .nav .nav-link {
    padding-left: 0;
    padding-right: 0;
}

//@include media-breakpoint-up(sm) {
//   .layout_social_modules .navbar-header {
//        margin-top: -34px;
//    }
//}

//@include media-breakpoint-down(xs) {
//    .box-search {
//        .form-inline .input-group {
//            margin-left: 0 !important;
//            margin-right: 0 !important;
//            .form-control { width: auto; }
//            .input-group-append { float: left; width: auto; }
//        }
//
//        .panel-body .form-inline .input-group {
//            width: 100%;
//            .input-group-addon, .input-group-append, .form-control {
//                width: 100%;
//            }
//        }
//    }
//}

@media (max-width: breakpoint-max(sm)) {
    .tiki-admin_modules {
        .q1 { width: 50%; padding-right: 10px; }
        .q23 { width: 50%; }
        .tips em { display: block; word-break: break-word; }
    }
}

